--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -24,5 +24,7 @@
         <filter-name>CharsetFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-
+    <listener>
+        <listener-class>listener.OnlineSessionListener</listener-class>
+    </listener>
 </web-app>
