--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -16,13 +16,24 @@
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.xhtml</url-pattern>
     </servlet-mapping>
+    <session-config>
+        <session-timeout>1</session-timeout>
+    </session-config>
     <filter>
         <filter-name>CharsetFilter</filter-name>
         <filter-class>filters.CharsetFilter</filter-class>
     </filter>
+    <filter>
+        <filter-name>LoginFilter</filter-name>
+        <filter-class>filters.LoginFilter</filter-class>
+    </filter>
     <filter-mapping>
         <filter-name>CharsetFilter</filter-name>
         <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>LoginFilter</filter-name>
+        <url-pattern>/showgrade</url-pattern>
     </filter-mapping>
 
 </web-app>
