在线人数显示

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -42,6 +42,6 @@
     </filter-mapping>
 
     <listener>
-        <listener-class>listener.LoginSessionListener</listener-class>
+        <listener-class>listener.OnlineSessionListener</listener-class>
     </listener>
 </web-app>
