--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -15,11 +15,11 @@
     </session-config>
     <filter>
         <filter-name>CharsetFilter</filter-name>
-        <filter-class>filters.CharsetFilter</filter-class>
+        <filter-class>edu.nju.j2ee.filters.CharsetFilter</filter-class>
     </filter>
     <filter>
         <filter-name>LoginFilter</filter-name>
-        <filter-class>filters.LoginFilter</filter-class>
+        <filter-class>edu.nju.j2ee.filters.LoginFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>CharsetFilter</filter-name>
@@ -31,6 +31,6 @@
     </filter-mapping>
 
     <listener>
-        <listener-class>listener.OnlineSessionListener</listener-class>
+        <listener-class>edu.nju.j2ee.listener.OnlineSessionListener</listener-class>
     </listener>
 </web-app>
