spring框架添加成功

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -33,4 +33,12 @@
     <listener>
         <listener-class>edu.nju.j2ee.listener.OnlineSessionListener</listener-class>
     </listener>
+
+    <context-param>
+        <param-name>contextConfigLocation </param-name>
+        <param-value>/WEB-INF/classes/applicationContext.xml </param-value>
+    </context-param>
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
 </web-app>
